--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+html {
+  font-size: 20px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +11,30 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+@media (max-width: 1199.98px) {
+  html {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 991.98px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  html {
+    font-size: 14px;
+  }
+
+}
+
+@media (max-width: 479.98px) {
+  html {
+    font-size: 12px;
+  }
+
 }
